fixed: modify API: messageEntity
